@@ -36,7 +36,6 @@ import java.time.temporal.ChronoField;
 import java.time.temporal.ChronoUnit;
 import java.util.AbstractMap;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
@@ -590,7 +589,7 @@ public class TimeRoutedAlias extends RoutedAlias {
   private List<Action> calcDeletes(List<Action> actions) {
     final String autoDeleteAgeMathStr = this.getAutoDeleteAgeMath();
     if (autoDeleteAgeMathStr == null || actions.size() == 0) {
-      return Collections.emptyList();
+      return List.of();
     }
     if (actions.size() > 1) {
       throw new IllegalStateException(
@@ -673,9 +672,9 @@ public class TimeRoutedAlias extends RoutedAlias {
       String mostRecentTime = mostRecentCol.substring(getAliasName().length() + sepLen);
       Instant parsed = DATE_TIME_FORMATTER.parse(mostRecentTime, Instant::from);
       String nextCol = calcNextCollection(parsed);
-      return Collections.singletonList(new Action(this, ActionType.ENSURE_EXISTS, nextCol));
+      return List.of(new Action(this, ActionType.ENSURE_EXISTS, nextCol));
     } else {
-      return Collections.emptyList();
+      return List.of();
     }
   }
 
