@@ -18,7 +18,7 @@ package org.apache.solr.search;
 
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Collections;
+import java.util.Map;
 import org.apache.lucene.index.BinaryDocValues;
 import org.apache.lucene.index.DocValuesSkipIndexType;
 import org.apache.lucene.index.DocValuesType;
@@ -48,7 +48,7 @@ public class NumericHidingLeafReader extends FilterLeafReader {
   public static LeafReader wrap(LeafReader leafReader, String field) {
     return UninvertingReader.wrap(
         new NumericHidingLeafReader(leafReader, field),
-        Collections.singletonMap(field, UninvertingReader.Type.SORTED)::get);
+        Map.of(field, UninvertingReader.Type.SORTED)::get);
   }
 
   private final String field;
@@ -71,7 +71,7 @@ public class NumericHidingLeafReader extends FilterLeafReader {
                 DocValuesType.NONE,
                 DocValuesSkipIndexType.NONE,
                 -1,
-                Collections.emptyMap(),
+                Map.of(),
                 fi.getPointDimensionCount(),
                 fi.getPointIndexDimensionCount(),
                 fi.getPointNumBytes(),
