@@ -44,7 +44,7 @@ import org.apache.solr.JSONTestUtil;
 import org.apache.solr.SolrTestCaseJ4.SuppressSSL;
 import org.apache.solr.client.solrj.SolrClient;
 import org.apache.solr.client.solrj.SolrServerException;
-import org.apache.solr.client.solrj.apache.HttpSolrClient;
+import org.apache.solr.client.solrj.impl.HttpSolrClient;
 import org.apache.solr.client.solrj.request.AbstractUpdateRequest;
 import org.apache.solr.client.solrj.request.CollectionAdminRequest;
 import org.apache.solr.client.solrj.request.CoreAdminRequest.Create;
@@ -59,7 +59,6 @@ import org.apache.solr.client.solrj.response.FacetField;
 import org.apache.solr.client.solrj.response.Group;
 import org.apache.solr.client.solrj.response.GroupCommand;
 import org.apache.solr.client.solrj.response.GroupResponse;
-import org.apache.solr.client.solrj.response.InputStreamResponseParser;
 import org.apache.solr.client.solrj.response.QueryResponse;
 import org.apache.solr.client.solrj.response.UpdateResponse;
 import org.apache.solr.cloud.api.collections.CollectionHandlingUtils;
@@ -696,10 +695,9 @@ public class BasicDistributedZkTest extends AbstractFullDistribZkTestBase {
 
     // try add commitWithin
     long before = cloudClient.query(new SolrQuery("*:*")).getResults().getNumFound();
-    for (SolrClient client : clients) {
+    for (var client : clients) {
       assertEquals(
-          "unexpected pre-commitWithin document count on node: "
-              + ((HttpSolrClient) client).getBaseURL(),
+          "unexpected pre-commitWithin document count on node: " + client.getBaseURL(),
           before,
           client.query(new SolrQuery("*:*")).getResults().getNumFound());
     }
@@ -1041,7 +1039,7 @@ public class BasicDistributedZkTest extends AbstractFullDistribZkTestBase {
 
   private void testStopAndStartCoresInOneInstance() throws Exception {
     JettySolrRunner jetty = jettys.get(0);
-    try (final SolrClient httpSolrClient = (HttpSolrClient) jetty.newClient(15000, 60000)) {
+    try (final var httpSolrClient = jetty.newClient(15000, 60000)) {
       ThreadPoolExecutor executor = null;
       try {
         executor =
@@ -1150,9 +1148,9 @@ public class BasicDistributedZkTest extends AbstractFullDistribZkTestBase {
 
     CollectionAdminResponse res = new CollectionAdminResponse();
     if (client == null) {
-      final String baseUrl = ((HttpSolrClient) clients.get(clientIndex)).getBaseURL();
+      final String baseUrl = clients.get(clientIndex).getBaseURL();
 
-      try (SolrClient aClient = createNewSolrClient("", baseUrl)) {
+      try (SolrClient aClient = createNewSolrClient(baseUrl, null)) {
         res.setResponse(aClient.request(request));
       }
     } else {
@@ -1260,7 +1258,7 @@ public class BasicDistributedZkTest extends AbstractFullDistribZkTestBase {
 
   private void testNumberOfCommitsWithCommitAfterAdd() throws SolrServerException, IOException {
     log.info("### STARTING testNumberOfCommitsWithCommitAfterAdd");
-    long startCommits = getNumCommits((HttpSolrClient) clients.get(0));
+    long startCommits = getNumCommits(clients.getFirst());
 
     NamedList<Object> result =
         clients
@@ -1271,19 +1269,14 @@ public class BasicDistributedZkTest extends AbstractFullDistribZkTestBase {
                     .setCommitWithin(900000)
                     .setAction(AbstractUpdateRequest.ACTION.COMMIT, true, true));
 
-    long endCommits = getNumCommits((HttpSolrClient) clients.get(0));
+    long endCommits = getNumCommits(clients.getFirst());
     assertEquals(startCommits + 1L, endCommits);
   }
 
-  private Long getNumCommits(HttpSolrClient sourceClient) throws SolrServerException, IOException {
-    String collection = sourceClient.getDefaultCollection();
-    try (SolrClient client =
-        new HttpSolrClient.Builder(sourceClient.getBaseURL())
-            .withConnectionTimeout(15000, TimeUnit.MILLISECONDS)
-            .withSocketTimeout(60000, TimeUnit.MILLISECONDS)
-            .build()) {
+  private Long getNumCommits(HttpSolrClient client) throws SolrServerException, IOException {
+    String collection = client.getDefaultCollection();
+    {
       var req = new MetricsRequest(SolrParams.of("wt", "prometheus"));
-      req.setResponseParser(new InputStreamResponseParser("prometheus"));
 
       NamedList<Object> resp = client.request(req);
       try (InputStream in = (InputStream) resp.get("stream")) {
@@ -1320,7 +1313,7 @@ public class BasicDistributedZkTest extends AbstractFullDistribZkTestBase {
               .setNode(jettys.get(0).getNodeName())
               .process(cloudClient);
       for (String coreName : resp.getCollectionCoresStatus().keySet()) {
-        collectionClients.add(createNewSolrClient(coreName, jettys.get(0).getBaseUrl().toString()));
+        collectionClients.add(createNewSolrClient(jettys.get(0).getBaseUrl().toString(), coreName));
       }
     }
 
@@ -1381,11 +1374,7 @@ public class BasicDistributedZkTest extends AbstractFullDistribZkTestBase {
             .getLeader("shard1");
 
     // now test that unloading a core gets us a new leader
-    try (SolrClient unloadClient =
-        new HttpSolrClient.Builder(jettys.get(0).getBaseUrl().toString())
-            .withConnectionTimeout(15000, TimeUnit.MILLISECONDS)
-            .withSocketTimeout(60000, TimeUnit.MILLISECONDS)
-            .build()) {
+    try (SolrClient unloadClient = jettys.getFirst().newClient(15000, 60000)) {
       Unload unloadCmd = new Unload(true);
       unloadCmd.setCoreName(leader.getCoreName());
 
@@ -1433,12 +1422,11 @@ public class BasicDistributedZkTest extends AbstractFullDistribZkTestBase {
 
   private void testSearchByCollectionName() throws SolrServerException, IOException {
     log.info("### STARTING testSearchByCollectionName");
-    SolrClient client = clients.get(0);
-    final String baseUrl = ((HttpSolrClient) client).getBaseURL();
+    final String baseUrl = clients.getFirst().getBaseURL();
 
     // the cores each have different names, but if we add the collection name to the url
     // we should get mapped to the right core
-    try (SolrClient client1 = createNewSolrClient(oneInstanceCollection, baseUrl)) {
+    try (SolrClient client1 = createNewSolrClient(baseUrl, oneInstanceCollection)) {
       SolrQuery query = new SolrQuery("*:*");
       long oneDocs = client1.query(query).getResults().getNumFound();
       assertEquals(3, oneDocs);
@@ -1447,13 +1435,12 @@ public class BasicDistributedZkTest extends AbstractFullDistribZkTestBase {
 
   private void testUpdateByCollectionName() throws SolrServerException, IOException {
     log.info("### STARTING testUpdateByCollectionName");
-    SolrClient client = clients.get(0);
-    final String baseUrl = ((HttpSolrClient) client).getBaseURL();
+    final String baseUrl = clients.getFirst().getBaseURL();
 
     // the cores each have different names, but if we add the collection name to the url
     // we should get mapped to the right core
     // test hitting an update url
-    try (SolrClient client1 = createNewSolrClient(oneInstanceCollection, baseUrl)) {
+    try (SolrClient client1 = createNewSolrClient(baseUrl, oneInstanceCollection)) {
       client1.commit();
     }
   }
@@ -1467,7 +1454,7 @@ public class BasicDistributedZkTest extends AbstractFullDistribZkTestBase {
     assertEquals(0, response.getStatus());
     List<SolrClient> collectionClients = new ArrayList<>();
     for (String coreName : response.getCollectionCoresStatus().keySet()) {
-      collectionClients.add(createNewSolrClient(coreName, jettys.get(0).getBaseUrl().toString()));
+      collectionClients.add(createNewSolrClient(jettys.get(0).getBaseUrl().toString(), coreName));
     }
 
     SolrClient client1 = collectionClients.get(0);
@@ -1541,7 +1528,7 @@ public class BasicDistributedZkTest extends AbstractFullDistribZkTestBase {
 
     pending.add(completionService.submit(call));
 
-    collectionClients.add(createNewSolrClient(collection + num, baseUrl));
+    collectionClients.add(createNewSolrClient(baseUrl, collection + num));
   }
 
   private void testMultipleCollections() throws Exception {
@@ -1663,7 +1650,7 @@ public class BasicDistributedZkTest extends AbstractFullDistribZkTestBase {
             return null;
           };
 
-      collectionClients.add(createNewSolrClient(collection, runner.getBaseUrl().toString()));
+      collectionClients.add(createNewSolrClient(runner.getBaseUrl().toString(), collection));
       pending.add(completionService.submit(call));
       while (pending != null && pending.size() > 0) {
 
@@ -1672,35 +1659,6 @@ public class BasicDistributedZkTest extends AbstractFullDistribZkTestBase {
         pending.remove(future);
       }
     }
-  }
-
-  @Override
-  protected SolrClient createNewSolrClient(String collection, String baseUrl) {
-
-    SolrClient client = getHttpSolrClient(baseUrl, collection);
-
-    return client;
-  }
-
-  /**
-   * @param collection the name of a collection or core to set as the "default" on the created
-   *     client.
-   * @param baseUrl the "base" URL of a Solr node. Should <em>not</em> contain a collection or core
-   *     name.
-   * @param connectionTimeoutMillis the HTTP connection timeout in milliseconds
-   * @param socketTimeoutMillis the HTTP socket-read timeout in milliseconds
-   */
-  protected SolrClient createNewSolrClient(
-      String collection, String baseUrl, int connectionTimeoutMillis, int socketTimeoutMillis) {
-
-    SolrClient client =
-        new HttpSolrClient.Builder(baseUrl)
-            .withDefaultCollection(collection)
-            .withConnectionTimeout(connectionTimeoutMillis, TimeUnit.MILLISECONDS)
-            .withSocketTimeout(socketTimeoutMillis, TimeUnit.MILLISECONDS)
-            .build();
-
-    return client;
   }
 
   @Override
